--- a/TakePhoto/app/build.gradle
+++ b/TakePhoto/app/build.gradle
@@ -21,7 +21,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+
+    //testing
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile('com.squareup.assertj:assertj-android:1.1.0') {
+        exclude module: 'support-annotations'
+    }
 }
