--- a/TakePhoto/app/build.gradle
+++ b/TakePhoto/app/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
+    //dagger
+    compile 'com.squareup.dagger:dagger:1.+'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.+'
+
 
     //testing
     testCompile 'junit:junit:4.12'
