--- a/TakePhoto/app/src/main/AndroidManifest.xml
+++ b/TakePhoto/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".TakePhotoActivity"
+            android:name=".TakePhoto.TakePhotoActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
